--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -16,7 +16,7 @@
 </label>
 
 <script>
-  import Keyboard from '@mambasdk/native/keyboard.js';
+  import Keyboard from '@mambasdk/api/keyboard.js';
 
   export default {
     components: {
