--- a/packages/components/Pos/src/Keypad.html
+++ b/packages/components/Pos/src/Keypad.html
@@ -17,7 +17,7 @@
 </div>
 
 <script>
-  import Keyboard from '@mambasdk/native/keyboard.js';
+  import Keyboard from '@mambasdk/api/keyboard.js';
 
   export default {
     methods: {
