Allow nested ternaries and line breaks in arrow functions

--- a/packages/components/Collection/src/Row.html
+++ b/packages/components/Collection/src/Row.html
@@ -52,7 +52,8 @@
       };
     },
     computed: {
-      _hasController: ({ href, _hasCustomController }) => !!(href || _hasCustomController),
+      _hasController: ({ href, _hasCustomController }) =>
+        !!(href || _hasCustomController),
     },
     oncreate() {
       const hasSlots = !!this.options.slots;
