--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -1,4 +1,4 @@
-<label class="input -{type} {readable ? "is-readable" : ''}" style="background-color: {bgColor}; color: {textColor};" on:mousedown="onMousedown(event)">
+<label class="input -{type} {readable ? 'is-readable' : ''}" style="background-color: {bgColor}; color: {textColor};" on:mousedown="onMousedown(event)">
   {#if label}
     <span>{label}</span>
   {/if}
