--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -1,13 +1,22 @@
-<label class="input -{type} {readable ? 'is-readable' : ''}" style="background-color: {bgColor}; color: {textColor};" on:mousedown="onMousedown(event)">
+<label
+  class="input -{type} {readable ? 'is-readable' : ''}"
+  style="background-color: {bgColor}; color: {textColor};"
+  on:mousedown="onMousedown(event)"
+>
   {#if label}
     <span>{label}</span>
   {/if}
 
   <input
     ref:input
-    class="-{align}" type={_visible ? 'text' : 'password'}
-    style="color: {textColor};" {disabled} on:focus="onFocus()"
-    on:blur="onBlur()" on:keyup="onKeyUp(event)" on:input="set({ value: this.value })"
+    class="-{align}"
+    type={_visible ? 'text' : 'password'}
+    style="color: {textColor};"
+    {disabled}
+    on:focus="onFocus()"
+    on:blur="onBlur()"
+    on:keyup="onKeyUp(event)"
+    on:input="set({ value: this.value })"
   />
 
   {#if type === 'password' && readable}
