--- a/packages/components/Dialog/src/Dialog.html
+++ b/packages/components/Dialog/src/Dialog.html
@@ -19,11 +19,10 @@
     data() {
       return {
         _isOpen: false,
-        title: null,
+        title: undefined,
         bgColor: '#e3e3e3',
         textColor: '#4a4a4a',
         align: 'center',
-        type: 'timed',
       };
     },
     computed: {
