Add initial control panel for virtual pos

--- a/packages/components/Pos/src/Pos.html
+++ b/packages/components/Pos/src/Pos.html
@@ -14,6 +14,7 @@
       <Card/>
     </div>
   </div>
+  <ControlPanel/>
 {:else}
   <div class="engine-alert">
     Para um rápido desenvolvimento mais fiel ao ambiente do Mamba, é recomendado o uso do <strong><a href="https://www.google.com/chrome/" target="_blank">Chrome</a></strong> como navegador.
@@ -28,6 +29,7 @@
       Keypad: './Keypad.html',
       Screen: './Screen.html',
       Card: './CreditCard.html',
+      ControlPanel: './ControlPanel.html',
     },
     data() {
       return {
