--- a/packages/components/Pos/src/CreditCard.html
+++ b/packages/components/Pos/src/CreditCard.html
@@ -1,7 +1,7 @@
 <div class="credit-card {isCardInserted ? 'is-inserted' : ''}" on:click="toggleCard()"></div>
 
 <script>
-  import Payment from '@mambasdk/api/payment.js';
+  import Payment from '@mambasdk/os/api/payment.js';
 
   export default {
     data() {
