--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -9,8 +9,8 @@
 </ConfirmationDialog>
 
 <script>
-  import App from '@mambasdk/os/api/app.js';
-  import Keyboard from '@mambasdk/os/api/keyboard.js';
+  import App from '@mambasdk/pos/api/app.js';
+  import Keyboard from '@mambasdk/pos/api/keyboard.js';
   import { ConfirmationDialog } from '@mambasdk/dialog';
   import { createHashHistory, getHistory } from 'svelte-routing';
   import links from 'svelte-routing/links.js';
