--- a/packages/components/Printable/src/Printable.html
+++ b/packages/components/Printable/src/Printable.html
@@ -29,7 +29,7 @@
 {/if}
 
 <script>
-  import Printer from '@mambasdk/os/api/printer.js';
+  import Printer from '@mambasdk/pos/api/printer.js';
   import { PromisedDialog, ConfirmationDialog } from '@mambasdk/dialog';
 
   const STATES = Object.freeze({
