Move POS view inside simulator directory

--- a/packages/pos/simulator/view/CreditCard.html
+++ b/packages/pos/simulator/view/CreditCard.html
@@ -1,7 +1,7 @@
 <div class="credit-card {isCardInserted ? 'is-inserted' : ''}" on:click="toggleCard()"></div>
 
 <script>
-  import Payment from '../api/payment.js';
+  import Payment from '../../api/payment.js';
 
   export default {
     data() {
