Move main driver extension to main.js

--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -37,6 +37,8 @@
     },
     methods: {
       setConfig(keyPath, value) {
+        if (__DEBUG__)
+          console.log(`[@mambasdk/pos] Setting '${keyPath}' to '${value}'`);
         Simulator.set(keyPath, value, false);
       },
     },
