--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -18,7 +18,7 @@
 </div>
 
 <script>
-  import Simulator from '../api.js';
+  import { Simulator } from '../main.js';
 
   export default {
     components: {
@@ -68,7 +68,7 @@
     cursor: pointer;
     font-size: 24px;
     transition: transform 0.3s ease;
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.2);
 
     &:hover {
       transform: scale(1.1) rotate(0);
