Better driver debugging log

--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -38,7 +38,7 @@
     methods: {
       setConfig(keyPath, value) {
         if (__DEBUG__)
-          console.log(`[@mambasdk/pos] Setting '${keyPath}' to '${value}'`);
+          console.log(`[Mamba Simulator] Setting '${keyPath}' to '${value}'`);
         Simulator.set(keyPath, value, false);
       },
     },
