--- a/packages/pos/simulator/view/Printer.html
+++ b/packages/pos/simulator/view/Printer.html
@@ -25,7 +25,7 @@
 </div>
 
 <script>
-  import { Simulator } from '../main.js';
+  import { Simulator } from '../index.js';
 
   const onceTransitionEnd = (el, cb) => {
     const onTransitionEnd = e => {
@@ -126,9 +126,9 @@
     left: 42px;
     bottom: 584px;
     /**
-                * Re-scale the printer to simulate the difference of density of pixels
-                * Magic scale number = (mockup printer width / real printer witdh) (250/384)
-                */
+      * Re-scale the printer to simulate the difference of density of pixels
+      * Magic scale number = (mockup printer width / real printer witdh) (250/384)
+      */
     transform: scale(0.5952380952380952);
     transform-origin: 0 100%;
 
@@ -178,13 +178,18 @@
 
   .paper {
     position: relative;
-    overflow: hidden;
+    overflow-y: auto;
     background-color: $paper-color;
     cursor: pointer;
     border-top-right-radius: 2px;
     border-top-left-radius: 2px;
     transition: transform 0.2s 0.3s ease, max-height 2s ease-in-out;
     transform-origin: 0 100%;
+    max-height: $max-paper-height;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .printer.is-idle & {
       max-height: 0;
@@ -196,7 +201,6 @@
     }
 
     .printer.is-printed & {
-      max-height: $max-paper-height;
       box-shadow: 2px 0px 2px 1px rgba(0, 0, 0, 0.4);
     }
 
@@ -209,7 +213,6 @@
 
   .content {
     position: relative;
-    overflow-y: scroll;
     z-index: 1;
     padding: 20px 21px 15px 20px;
     filter: contrast(300%) grayscale(100%) url(#remove-colors-alpha);
