Hide control panel in mobile view

--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -52,6 +52,10 @@
     overflow: hidden;
     color: #333;
     user-select: none;
+
+    @media (max-width: 480px) {
+      display: none;
+    }
   }
 
   .panel-toggle {
