Revertendo alterações no código

--- a/packages/components/Range/example/Example.html
+++ b/packages/components/Range/example/Example.html
@@ -17,7 +17,7 @@
 
   <h1>Custom range <span>{'<Range unit="" max={1000} min={-1000} step={500}/>'}</span></h1>
   <div class="row">
-    <Range unit="6" max={1000} min={-1000} step={500} on:change="console.log(event)"/>
+    <Range unit="" max={1000} min={-1000} step={500} on:change="console.log(event)"/>
   </div>
 
   <h1>Custom colored range <span>{'<Range mainColor="#888" textColor="#555" barColor="#fdd"/>'}</span></h1>
