--- a/packages/pos/simulator/view/Pos.html
+++ b/packages/pos/simulator/view/Pos.html
@@ -17,7 +17,7 @@
   <ControlPanel/>
 {:else}
   <div class="engine-alert">
-    Para um rápido desenvolvimento mais fiel ao ambiente do Mamba, é recomendado o uso do <strong><a href="https://www.google.com/chrome/" target="_blank">Chrome</a></strong> como navegador.
+    Para um rápido desenvolvimento mais fiel ao ambiente do State, é recomendado o uso do <strong><a href="https://www.google.com/chrome/" target="_blank">Chrome</a></strong> como navegador.
   </div>
   <div id="app-root">
     <slot></slot>
