--- a/packages/components/Icon/src/Icon.html
+++ b/packages/components/Icon/src/Icon.html
@@ -9,7 +9,7 @@
         level: undefined,
       };
     },
-    onstate({ current: { color, src } }) {
+    onupdate({ current: { color, src } }) {
       const iconEl = this.refs.icon;
 
       if (color) {
