--- a/packages/components/App/example/Example.html
+++ b/packages/components/App/example/Example.html
@@ -1,6 +1,6 @@
 <App>
   <div class="container">
-    <h1>@mambasdk/app</h1>
+    <h1>@mamba/app</h1>
     <div class="row">
       <p>It is a obligatory component for all Svelte Mamba Apps</p>
       <br>
