--- a/packages/components/AppBar/example/Example.html
+++ b/packages/components/AppBar/example/Example.html
@@ -11,7 +11,7 @@
 <AppBar title="Lorem ipsum "></AppBar>
 
 <script>
-  import MambaStore from '@mambasdk/store';
+  import MambaStore from '@mamba/store';
 
   const store = MambaStore();
 
