--- a/packages/components/Dialog/src/ConfirmationDialog.html
+++ b/packages/components/Dialog/src/ConfirmationDialog.html
@@ -13,7 +13,7 @@
 </Dialog>
 
 <script>
-  import { RoundIcon } from '@mambasdk/icon';
+  import { RoundIcon } from '@mamba/icon';
 
   export default {
     components: {
