--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -33,11 +33,11 @@
 </label>
 
 <script>
-  import Keyboard from '@mambasdk/pos/api/keyboard.js';
+  import Keyboard from '@mamba/pos/api/keyboard.js';
 
   export default {
     components: {
-      Icon: '@mambasdk/icon',
+      Icon: '@mamba/icon',
     },
     data() {
       return {
