--- a/packages/components/Printable/src/Printable.html
+++ b/packages/components/Printable/src/Printable.html
@@ -29,8 +29,8 @@
 {/if}
 
 <script>
-  import Printer from '@mambasdk/pos/api/printer.js';
-  import { PromisedDialog, ConfirmationDialog } from '@mambasdk/dialog';
+  import Printer from '@mamba/pos/api/printer.js';
+  import { PromisedDialog, ConfirmationDialog } from '@mamba/dialog';
 
   const STATES = Object.freeze({
     IDLE: 0,
