--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -22,7 +22,7 @@
 
   export default {
     components: {
-      Switch: '@mambasdk/switch',
+      Switch: '@mamba/switch',
     },
     data() {
       return State.get();
