--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -9,9 +9,9 @@
 </ConfirmationDialog>
 
 <script>
-  import App from '@mambasdk/pos/api/app.js';
-  import Keyboard from '@mambasdk/pos/api/keyboard.js';
-  import { ConfirmationDialog } from '@mambasdk/dialog';
+  import App from '@mamba/pos/api/app.js';
+  import Keyboard from '@mamba/pos/api/keyboard.js';
+  import { ConfirmationDialog } from '@mamba/dialog';
   import { createHashHistory, getHistory } from 'svelte-routing';
   import links from 'svelte-routing/links.js';
 
