--- a/packages/components/Collection/src/Row.html
+++ b/packages/components/Collection/src/Row.html
@@ -35,7 +35,7 @@
 
   export default {
     components: {
-      Icon: '@mambasdk/icon',
+      Icon: '@mamba/icon',
     },
     data() {
       return {
