--- a/packages/components/Progress/src/ProgressBar.html
+++ b/packages/components/Progress/src/ProgressBar.html
@@ -30,7 +30,7 @@
 </script>
 
 <style>
-  @import '@mambasdk/styles/colors.pcss';
+  @import '@mamba/styles/colors.pcss';
 
   .progress-bar {
     display: block;
