--- a/packages/components/Switch/src/Switch.html
+++ b/packages/components/Switch/src/Switch.html
@@ -20,7 +20,7 @@
 </script>
 
 <style>
-  @import '@mambasdk/styles/colors.pcss';
+  @import '@mamba/styles/colors.pcss';
 
   $checked-icon-border: $green;
   $checked-bar-bg: $green;
