Remove unused sprite

--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -50,8 +50,7 @@
     components: {
       Dialog,
       PromisedDialog,
-      ConfirmationDialog,
-      Sprite: '@mamba/sprite',
+      ConfirmationDialog
     },
     methods: {
       refreshPromise() {
