Update all packages to 0.0.2-alpha.1

--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -72,10 +72,13 @@
           history.goBack();
         }
       },
-      /** Prevent default back button behaviour */
+      /** Prevent default back/enter button behaviour */
       onKeydown(e) {
         const keyName = Keyboard.getKeyName(e.keyCode);
-        if (keyName === 'back' && isValidShortcut(keyName, e)) {
+        if (
+          (keyName === 'back' || keyName === 'enter') &&
+          isValidShortcut(keyName, e)
+        ) {
           e.preventDefault();
         }
       },
