--- a/packages/components/Icon/src/Icon.html
+++ b/packages/components/Icon/src/Icon.html
@@ -90,8 +90,7 @@
   }
 
   .icon {
-    display: inline-block;
-    vertical-align: middle;
+    display: block;
     width: 24px;
     height: 24px;
     background-color: #494949;
