--- a/packages/pos/simulator/view/POS.html
+++ b/packages/pos/simulator/view/POS.html
@@ -1,4 +1,4 @@
-{#if browserEngine === 'webkit'}
+{#if _browserEngine === 'webkit'}
   <div class="wrapper">
     <div class="container">
       <div class="pos-wrapper">
@@ -35,7 +35,7 @@
     },
     data() {
       return {
-        browserEngine: 'webkit',
+        _browserEngine: 'webkit',
       };
     },
     oncreate() {
@@ -49,7 +49,7 @@
        * Detect if we're running on a webkit environment.
        * We check for `edge` because it fakes one.
        */
-      const browserEngine =
+      const _browserEngine =
         'WebkitAppearance' in document.documentElement.style &&
         !/edge/i.test(navigator.userAgent)
           ? 'webkit'
@@ -59,8 +59,8 @@
        * Set the render engine to a body attribute
        * to make our css a bit smarter since we depend heavily on webkit.
        * */
-      document.body.setAttribute('engine', browserEngine);
-      this.set({ browserEngine });
+      document.body.setAttribute('engine', _browserEngine);
+      this.set({ _browserEngine });
     },
   };
 </script>
