Add theme.pcss abstraction file

--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,4 +1,4 @@
-@import 'colors.pcss';
+@import 'theme.pcss';
 @import 'src/variables.pcss';
 @import 'src/reset.pcss';
 @import 'src/normalize.pcss';
