--- a/packages/styles/src/base.pcss
+++ b/packages/styles/src/base.pcss
@@ -10,7 +10,7 @@
 
 body {
   background-color: #fff;
-  color: $black;
+  color: $default-text-color;
   font-family: $mamba-font-family;
   font-size: $mamba-font-size-default;
   font-style: normal;
