--- a/packages/components/Button/src/Button.html
+++ b/packages/components/Button/src/Button.html
@@ -21,9 +21,7 @@
       };
     },
     computed: {
-      style({
-        textColor, bgColor, width, borderColor,
-      }) {
+      style({ textColor, bgColor, width, borderColor }) {
         return [
           textColor && `color:${textColor}`,
           bgColor && `background-color:${bgColor}`,
@@ -35,6 +33,9 @@
       },
     },
     methods: {
+      click() {
+        this.refs.button.click();
+      },
       focus() {
         this.refs.button.focus();
       },
