Move variables to theme.pcss

--- a/packages/styles/src/base.pcss
+++ b/packages/styles/src/base.pcss
@@ -11,8 +11,8 @@
 body {
   background-color: #fff;
   color: $default-text-color;
-  font-family: $mamba-font-family;
-  font-size: $mamba-font-size-default;
+  font-family: $default-font-family;
+  font-size: $default-font-size;
   font-style: normal;
   font-weight: normal;
   line-height: 1.4;
