--- a/packages/styles/src/desktop/base.pcss
+++ b/packages/styles/src/desktop/base.pcss
@@ -21,6 +21,7 @@ abbr {
 
 code,
 kbd {
-  font-family: $mamba-code-font-family;
+  font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono',
+    'Ubuntu Mono', Menlo, Courier, monospace;
   user-select: auto;
 }
