--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,3 +1,8 @@
 @import 'colors.pcss';
 
+/** Colors */
 $default-text-color: $grey-darker;
+
+/** Fonts */
+$default-font-family: 'Roboto', Arial, sans-serif;
+$default-font-size: 14px;
